<resources>
    <string name="app_name">贪吃蛇</string>
    <string name="action_settings">Settings</string>
    <string name="score">分数 :</string>
    <string name="score_value">10</string>
    <string name="pause_and_start">暂停/开始</string>
    <string name="set">设置(点击左边的按钮)</string>
    <string name="set_title">设 置</string>
    <string name="speed">速度:</string>
    <string name="background_music">背景音乐:</string>
    <string name="sure">确定</string>
    <string name="cacel">取消</string>
    <string name="time">2016.1.25 11:21:30</string>
    <string name="more">加载更多</string>
    <string name="delete">删除</string>
    <string name="clear">清空所有</string>

</resources>
